# CS4302YOLO-Project

./: .gitignore  README.md  check_conv2d.py  ordered_kernel.txt  profile_results.txt  profiler_test.py  test.py  yolo_setup.sh
dcgan/: CMakeLists.txt  README.md  dcgan.cpp  gemm.cu  im2col_test.cu
logs/: wjxie_241224_profile_results.txt
ours/: OurConv2d.cu  OurConv2d_v0.cu  OurConv2d_v1.cu  dispatch.py  native_functions.yaml
ref/: ConvolutionMM2d.cu
yolov5/: profile_results.txt  requirements.txt  tutorial.ipynb  val.py
yolov5/utils/: general.py
